Rename User App

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">TryUserApp</string>
+    <string name="app_name">Nofwa Customer App</string>
     <string name="web_client_id">608371446284-m967ifoovvhbbhieeprig28ohmgsjocc.apps.googleusercontent.com</string>
 </resources>
